--- a/project_final.ipynb
+++ b/project_final.ipynb
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "12125323",
+   "id": "41e065f7",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e6ab6868",
+   "id": "531866ae",
    "metadata": {},
    "outputs": [
     {
@@ -486,6 +486,51 @@
    ],
    "source": [
     "banking.describe(include='all')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f7d629a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RowNumber          0\n",
+       "CustomerId         0\n",
+       "Surname            0\n",
+       "CreditScore        0\n",
+       "Geography          0\n",
+       "Gender             0\n",
+       "Age                0\n",
+       "Tenure             0\n",
+       "Balance            0\n",
+       "NumOfProducts      0\n",
+       "HasCrCard          0\n",
+       "IsActiveMember     0\n",
+       "EstimatedSalary    0\n",
+       "Exited             0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "banking.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4415a14d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "banking."
    ]
   }
  ],
