--- a/project_final.ipynb
+++ b/project_final.ipynb
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "41e065f7",
+   "id": "40fbe126",
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "531866ae",
+   "id": "f496a5da",
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f7d629a5",
+   "id": "56eb49a2",
    "metadata": {},
    "outputs": [
     {
@@ -526,11 +526,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4415a14d",
+   "id": "06fc16f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "banking."
+    "banking.drop(columns='Row')"
    ]
   }
  ],
