--- a/project_final.ipynb
+++ b/project_final.ipynb
@@ -544,6 +544,30 @@
    "source": [
     "banking.head(20)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "55eb9960",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "France     5014\n",
+       "Germany    2509\n",
+       "Spain      2477\n",
+       "Name: Geography, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "banking.Geography.value_counts()"
+   ]
   }
  ],
  "metadata": {
