Add existing file

--- a/project_final.ipynb
+++ b/project_final.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "4efaa952",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "4         79084.10       0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,6 +567,28 @@
    ],
    "source": [
     "banking.Geography.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "070149d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age    38.9218\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "banking[['Age']].mean()"
    ]
   }
  ],
