--- a/project_final.ipynb
+++ b/project_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5ff38dc5",
    "metadata": {},
    "outputs": [],
@@ -10,15 +10,15 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from jupyterthemes import jtplot\n",
-    "jtplot.style(theme='monokai', context='notebook', ticks=True, grid=False)\n",
+    "# from jupyterthemes import jtplot\n",
+    "# jtplot.style(theme='monokai', context='notebook', ticks=True, grid=False)\n",
     "plt.style.use(\"fivethirtyeight\")\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "4efaa952",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "4         79084.10       0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "41e065f7",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
        "(10000, 14)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "531866ae",
    "metadata": {},
    "outputs": [
@@ -479,7 +479,7 @@
        "max           1.000000    199992.480000      1.000000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "f7d629a5",
    "metadata": {},
    "outputs": [
@@ -514,7 +514,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,19 +525,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "4415a14d",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "banking."
-   ]
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-37d150fa7536>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-8-37d150fa7536>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    banking.\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "7dc248448b420f41476db4860848315030f0bc2ae6e8693ca8bd17be95027960"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
