--- a/project_final.ipynb
+++ b/project_final.ipynb
@@ -4,8 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Questions**\n",
-    "### 1) Demographic - customers background (ie gender, country etc)"
+    "## **Dataset**\n",
+    "\n",
+    "Features:<br>\n",
+    "\n",
+    "`RowNumber` - the index of the row in the data <br>\n",
+    "`CustomerId` - unique customer identifier <br>\n",
+    "`Surname` - surname <br>\n",
+    "`CreditScore` - credit rating <br>\n",
+    "`Geography` - country of residence <br>\n",
+    "`Gender` - gender <br>\n",
+    "`Age` - age <br>\n",
+    "`Tenure` - how many years a person has been a client of the bank <br>\n",
+    "`Balance` - account balance <br>\n",
+    "`NumOfProducts` - the number of bank products used by the client <br>\n",
+    "`HasCrCard` - availability of a credit card <br>\n",
+    "`IsActiveMember` - client activity <br>\n",
+    "`EstimatedSalary` - estimated salary <br>\n",
+    "\n",
+    "Target column: <br>\n",
+    "\n",
+    "`Exited` - the fact of the client's departure "
    ]
   },
   {
