--- a/project_final.ipynb
+++ b/project_final.ipynb
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e68d92c1",
+   "id": "d8767a76",
    "metadata": {},
    "source": [
     "## Modeling"
@@ -1541,7 +1541,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a86a8d1d",
+   "id": "e3ce2842",
    "metadata": {},
    "outputs": [
     {
@@ -1707,7 +1707,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b3d790aa",
+   "id": "be516a9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1717,7 +1717,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c2b1f791",
+   "id": "aaf2ce92",
    "metadata": {},
    "outputs": [
     {
@@ -1870,7 +1870,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "79444d9a",
+   "id": "fb6358cc",
    "metadata": {},
    "outputs": [
     {
@@ -1891,7 +1891,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "bd72bc3d",
+   "id": "088ca43d",
    "metadata": {},
    "outputs": [
     {
@@ -1916,7 +1916,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "7e4afc35",
+   "id": "4de0746d",
    "metadata": {},
    "outputs": [
     {
@@ -2184,7 +2184,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "a884f394",
+   "id": "c938b80b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2204,7 +2204,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "b9e26bc3",
+   "id": "f339cceb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2215,7 +2215,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "f8135137",
+   "id": "76983c9f",
    "metadata": {},
    "outputs": [
     {
@@ -2241,7 +2241,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "ec8a7497",
+   "id": "60f6f260",
    "metadata": {},
    "outputs": [
     {
@@ -2264,7 +2264,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "76c5158c",
+   "id": "8d6b348e",
    "metadata": {},
    "outputs": [
     {
@@ -2291,7 +2291,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "e3c25732",
+   "id": "ebd59546",
    "metadata": {},
    "outputs": [
     {
@@ -2315,7 +2315,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a40062b8",
+   "id": "9eddb4bb",
    "metadata": {},
    "outputs": [
     {
@@ -2375,7 +2375,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "5f4bf476",
+   "id": "5103f753",
    "metadata": {},
    "outputs": [
     {
@@ -2527,7 +2527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84d59bea",
+   "id": "4818080b",
    "metadata": {},
    "source": [
     "|Variables| Odds Ratio| Explanation|\n",
@@ -2548,7 +2548,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "e46feb5e",
+   "id": "33dc5d12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2558,7 +2558,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "b5933bd5",
+   "id": "75773e01",
    "metadata": {},
    "outputs": [
     {
@@ -2610,7 +2610,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "99ce985c",
+   "id": "ffc056a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2630,7 +2630,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "b6aee6df",
+   "id": "9ff1afb8",
    "metadata": {},
    "outputs": [
     {
@@ -2657,7 +2657,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "1ebd9df5",
+   "id": "d33923ec",
    "metadata": {},
    "outputs": [
     {
@@ -2682,7 +2682,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "b0bde83d",
+   "id": "7b1c0fa2",
    "metadata": {},
    "outputs": [
     {
@@ -2708,7 +2708,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "f9edc8e1",
+   "id": "9430881a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2726,7 +2726,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "8f1599c4",
+   "id": "f5779e88",
    "metadata": {},
    "outputs": [
     {
@@ -2750,7 +2750,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "713ac71c",
+   "id": "2867b8fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2767,7 +2767,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "4f462651",
+   "id": "75548e38",
    "metadata": {},
    "outputs": [
     {
@@ -2792,27 +2792,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "84bee477",
+   "execution_count": 50,
+   "id": "23e0a851",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy =  0.7990959316926167\n",
-      "Precision =  0.8019464720194647\n",
-      "Recall =  0.8074473297403234\n",
-      "F1 Score =  0.8046875\n"
+      "Accuracy =  0.7019085886489201\n",
+      "Precision =  0.6837349397590361\n",
+      "Recall =  0.7785399314061734\n",
+      "F1 Score =  0.7280641466208476\n"
      ]
     }
    ],
    "source": [
     "# Evaluate performance of Decision Tree\n",
-    "print(\"Accuracy = \" ,accuracy_score(test_y,y_pred))\n",
-    "print(\"Precision = \" ,precision_score(test_y,y_pred))\n",
-    "print(\"Recall = \" ,recall_score(test_y,y_pred))\n",
-    "print(\"F1 Score = \" ,f1_score(test_y,y_pred))"
+    "print(\"Accuracy = \" ,accuracy_score(test_y,y_pred_class))\n",
+    "print(\"Precision = \" ,precision_score(test_y,y_pred_class))\n",
+    "print(\"Recall = \" ,recall_score(test_y,y_pred_class))\n",
+    "print(\"F1 Score = \" ,f1_score(test_y,y_pred_class))"
    ]
   }
  ],
