--- a/project_final.ipynb
+++ b/project_final.ipynb
@@ -642,6 +642,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# set categorical and numerical variables\n",
     "categorical = ['Geography', 'Gender', 'HasCrCard', 'IsActiveMember']\n",
     "continous   = ['CeditScore', 'Age', 'Tenure', 'Balance', 'EstimatedSalary']"
    ]
@@ -1071,6 +1072,7 @@
     }
    ],
    "source": [
+    "# View classification if Exited variable\n",
     "banking.Exited.value_counts()\n",
     "\n",
     "# 0 = Retained; 1 = Exited"
@@ -1096,13 +1098,14 @@
     }
    ],
    "source": [
+    "# Visualize the classification of Exited variable\n",
     "count_Exited = banking.Exited.value_counts()\n",
     "count_Exited.plot(kind='bar');\n",
     "plt.xlabel('Exited\\n 0(Retained) 1(Exited)');\n",
     "plt.ylabel('Number of Customer');\n",
     "plt.title('Number of Customer per Churn');\n",
     "plt.xticks(rotation=0);\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -1255,6 +1258,7 @@
     }
    ],
    "source": [
+    "# View mean variables by its Geography\n",
     "meanAge_byGeo = banking.groupby('Geography')['Age'].mean()\n",
     "meanCS_byGeo  = banking.groupby('Geography')['CreditScore'].mean()\n",
     "meanBal_byGeo = banking.groupby('Geography')['Balance'].mean()\n",
@@ -1319,6 +1323,7 @@
     }
    ],
    "source": [
+    "# Visualize scatter plot\n",
     "feature_cols = banking.columns.tolist()\n",
     "grr = pd.plotting.scatter_matrix(banking[feature_cols], figsize=(15, 15), alpha=0.7)"
    ]
@@ -1504,6 +1509,7 @@
     }
    ],
    "source": [
+    "# View correlation score between all variables\n",
     "banking.corr()"
    ]
   },
@@ -1527,6 +1533,7 @@
     }
    ],
    "source": [
+    "# Visualize the correlation\n",
     "sns.heatmap(banking.corr());"
    ]
   },
@@ -1700,6 +1707,7 @@
     }
    ],
    "source": [
+    "# Create Dummy Variables\n",
     "banking_dummy = pd.get_dummies(banking)\n",
     "banking_dummy.head()"
    ]
@@ -1711,6 +1719,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Drop either one column of dummy variable\n",
     "banking_dummy.drop([\"Geography_France\",\"Gender_Female\"],axis=1, inplace=True)"
    ]
   },
@@ -1865,6 +1874,14 @@
    ],
    "source": [
     "banking_dummy.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9efe9ea8",
+   "metadata": {},
+   "source": [
+    "### Handle Imbalanced Dataset"
    ]
   },
   {
@@ -2216,6 +2233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set the features and also target variable\n",
     "x = banking_model.drop(['Exited'], axis = 1)\n",
     "y = banking_model['Exited']"
    ]
@@ -2240,8 +2258,9 @@
     }
    ],
    "source": [
+    "# Split dataset into train set and test set\n",
     "train_x,test_x,train_y,test_y = train_test_split(x, y, random_state=12)\n",
-    "\n",
+    "# Show the length of train and test set\n",
     "print(len(train_x))\n",
     "print(len(test_x))\n",
     "print(len(train_y))\n",
@@ -2272,9 +2291,11 @@
     }
    ],
    "source": [
+    "# Train Logistic Regression\n",
     "LR = LogisticRegression().fit(train_x,train_y)\n",
+    "# Store the predicted response values.\n",
     "predict = LR.predict(test_x)\n",
-    "\n",
+    "# Calculate confusion matrix\n",
     "confusion_matrix = confusion_matrix(test_y, predict)\n",
     "print(confusion_matrix)"
    ]
@@ -2302,6 +2323,7 @@
     }
    ],
    "source": [
+    "# Evaluate performance of Logistic Regression\n",
     "from sklearn.metrics import classification_report\n",
     "print(classification_report(test_y, predict))"
    ]
@@ -2324,6 +2346,7 @@
     }
    ],
    "source": [
+    "# Print the performance model\n",
     "print(\"Accuracy = \" ,accuracy_score(test_y,predict))\n",
     "print(\"Precision = \" ,precision_score(test_y,predict))\n",
     "print(\"Recall = \" ,recall_score(test_y,predict))\n",
@@ -2535,7 +2558,7 @@
    ],
    "source": [
     "import statsmodels.formula.api as smf\n",
-    "\n",
+    "# Show the Odds Ratio of each features\n",
     "model_odds = pd.DataFrame(np.exp(lm.params), columns= ['OR'])\n",
     "model_odds['z-value']= lm.pvalues\n",
     "model_odds[['2.5%', '97.5%']] = np.exp(lm.conf_int())\n",
@@ -2619,10 +2642,18 @@
     "feature_importance[\"importance\"] = pow(math.e, importance)\n",
     "feature_importance = feature_importance.sort_values(by = [\"importance\"], ascending=False)\n",
     "print(feature_importance)\n",
-    " \n",
+    "# plot graph of feature importances for better visualization\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "ax = feature_importance.plot.barh(x='feature', y='importance')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8595455",
+   "metadata": {},
+   "source": [
+    "* Feature Age is the most important variable in predicting bank customer churn choosen by Logistic Regression model following by Geography and Balance, the least important variable is Tenure."
    ]
   },
   {
@@ -2676,6 +2707,7 @@
     }
    ],
    "source": [
+    "# The performance of Decision Tree\n",
     "from sklearn.metrics import classification_report\n",
     "print(classification_report(test_y, y_pred))"
    ]
@@ -2733,6 +2765,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b52d73e6",
+   "metadata": {},
+   "source": [
+    "* Decision Tree model choose Age feature as the most importance variable following by Balance and Estimated Salary, the least importance variable is HasCrCard."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "10acd09d",
    "metadata": {},
    "source": [
@@ -2747,7 +2787,7 @@
    "outputs": [],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "\n",
+    "# calculate the score for each k\n",
     "scores = []\n",
     "for k in range(1,100):\n",
     "    knn = KNeighborsClassifier(n_neighbors=k)\n",
@@ -2777,6 +2817,7 @@
     }
    ],
    "source": [
+    "# visualize score with each k\n",
     "data = pd.DataFrame(scores,columns=['k','score'])\n",
     "data.plot.line(x='k',y='score');"
    ]
@@ -2788,7 +2829,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Instantiate the model (using the value K=5).\n",
+    "# Instantiate the model (using the value K=3), it give the best k score.\n",
     "knn = KNeighborsClassifier(n_neighbors=3)\n",
     "\n",
     "# Fit the model with data.\n",
@@ -2821,6 +2862,7 @@
     }
    ],
    "source": [
+    "# The performance of kNN\n",
     "print(classification_report(test_y, y_pred_class))"
    ]
   },
@@ -2842,7 +2884,7 @@
     }
    ],
    "source": [
-    "# Evaluate performance of KNN\n",
+    "# Evaluate performance of kNN\n",
     "print(\"Accuracy = \" ,accuracy_score(test_y,y_pred_class))\n",
     "print(\"Precision = \" ,precision_score(test_y,y_pred_class))\n",
     "print(\"Recall = \" ,recall_score(test_y,y_pred_class))\n",
